# ox-simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json
.github/workflows/: ci.yml  release.yml
examples/: simulator_control_example.py
src/: config.cpp  config.h  config.hpp  device_profiles.cpp  device_profiles.h  driver.cpp  frame_data.h  gui_window.cpp  http_server.cpp  http_server.h  simulator_core.cpp  simulator_core.h
src/api/: CMakeLists.txt  http_server.cpp  http_server.h
src/gui/: CMakeLists.txt  dark_titlebar_macos.mm  gui_window.cpp  gui_window.h  platform_styling.cpp  platform_styling.h  platform_styling_macos.mm  styling.hpp  utils.hpp  window_contents.hpp
